# Engine

./: CMakeLists.txt
code/rd-common/: tr_public.h
code/rd-vanilla/: tr_bsp.cpp  tr_ghoul2.cpp  tr_init.cpp  tr_light.cpp  tr_mesh.cpp  tr_scene.cpp  tr_shader.cpp  tr_subs.cpp
codemp/: CMakeLists.txt  include_duktape.h
codemp/client/: cl_keys.cpp  cl_main.cpp
codemp/craft/: db.c  matrix.c  util.c  util.h
codemp/duktape/: bind_imgui.cpp  bind_memory.cpp  bind_utils2.cpp  dukdebugheaders.h  dukhelpers.cpp  dukhelpers.h  duktape.c  duktapestuff.h  js_stuff.cpp
codemp/duktape_openjk/: game.cpp  game.h
codemp/game/: CMakeLists.txt  g_main.c  g_public.h
codemp/glew/src/: glew.c
codemp/imgui/: ffi.cpp  imgui_default_docks.cpp  imgui_dock.cpp  imgui_dock.h  imgui_impl_idtech3_gles.cpp
codemp/imgui_docks/: dock.h  dock_console.cpp  dock_duktape.cpp  dock_duktape.h  dock_jidaiscript.cpp  dock_micropython.cpp  dock_micropython.h  dock_node.h
codemp/imgui_docks_openjk/: dock_controlflow.h  dock_images.cpp  dock_mdxa.cpp  dock_mdxa.h  dock_mdxm.cpp  dock_models.cpp  dock_opsys.cpp  dock_quakeshaders.cpp
codemp/imgui_openjk/: gluecode.cpp  imgui_openjk_default_docks.h
codemp/javascript/: JidaiScript.js  Number.js  Waypoints.js  entity.js  init.js  printf.js  vec3.js
codemp/jidaiscript/: stuff.ji
codemp/ops/: op.cpp  op_idtech3_image_color.cpp  op_idtech3_mdxm.cpp  op_idtech3_rmo.cpp
codemp/qcommon/: q_shared.h
codemp/rd-common/: tr_common.h  tr_font.cpp  tr_image_jpg.cpp  tr_image_load.cpp  tr_image_png.cpp  tr_image_tga.cpp  tr_public.h
codemp/rd-dedicated/: G2_API.cpp  G2_bones.cpp  G2_misc.cpp  tr_ghoul2.cpp  tr_init.cpp  tr_local.h  tr_main.cpp  tr_model.cpp  tr_shader.cpp  tr_skin.cpp
codemp/rd-rend2/: CMakeLists.txt  G2_API.cpp  G2_bones.cpp  G2_misc.cpp  glsl_shaders.cpp  glsl_shaders.h  matrix.h  primitives_3d.h  rip_refimport.cpp  rip_refimport.h  tr_animation.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cache.cpp  tr_cmds.cpp  tr_compose_models.cpp  tr_extensions.cpp  tr_extramath.cpp  tr_fbo.cpp  tr_ghoul2.cpp  tr_glsl.cpp  tr_image.cpp  tr_imgui.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_model_iqm.cpp  tr_postprocess.cpp  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_skin.cpp  tr_sky.cpp  tr_subs.cpp  tr_surface.cpp  tr_vbo.cpp  (+2 more)
codemp/rd-rend2/craft/: auth.c  client.c  main.c  util.c  world.c
codemp/rd-rend2/imgui/: imgui_api.h  imgui_default_docks.cpp  imgui_dock.cpp
codemp/rd-rend2/imgui_docks/: dock_duktape.cpp  dock_duktape.h  dock_jidaiscript.cpp  dock_jidaiscript.h  dock_micropython.cpp  dock_micropython.h  dock_node.cpp  dock_node.h
codemp/rd-rend2/imgui_docks_openjk/: dock_mdxa.cpp  dock_models.cpp  dock_quakeshaders.cpp  dock_shadereditor.cpp
codemp/rd-rend2/micropython/: argcheck.c  asmarm.c  asmarm.h  asmbase.c  asmthumb.c  asmthumb.h  asmx64.c  asmx64.h  asmx86.c  asmx86.h  asmxtensa.c  asmxtensa.h  bc.c  bc.h  binary.c  binary.h  builtin.h  builtinevex.c  builtinhelp.c  builtinimport.c  compile.c  compile.h  emit.h  emitbc.c  emitcommon.c  emitglue.c  emitglue.h  emitinlinethumb.c  emitinlinextensa.c  emitnarm.c  emitnative.c  emitnthumb.c  emitnx64.c  emitnx86.c  emitnxtensa.c  formatfloat.c  frozenmod.c  frozenmod.h  gc.c  gc.h  (+115 more)
codemp/rd-rend2/micropython/extmod/: machine_i2c.c  machine_i2c.h  machine_mem.c  machine_mem.h  machine_pinbase.c  machine_pinbase.h  machine_pulse.c  machine_pulse.h  machine_signal.c  machine_signal.h  machine_spi.c  machine_spi.h  misc.h  modbtree.c  modframebuf.c  modlwip.c  modonewire.c  modubinascii.c  moducryptolib.c  moductypes.c  moduhashlib.c  moduheapq.c  modujson.c  modurandom.c  modure.c  moduselect.c  modussl_axtls.c  modussl_mbedtls.c  modutimeq.c  moduzlib.c  modwebrepl.c  modwebsocket.c  uos_dupterm.c  utime_mphal.c  utime_mphal.h  vfs.c  vfs.h  vfs_fat.c  vfs_fat.h  vfs_fat_diskio.c  (+7 more)
codemp/rd-rend2/micropython/lib/utils/: printf.c
codemp/rd-rend2/micropython/ports/msvc/: .gitignore  fmode.c  windows_mphal.c
codemp/rd-rend2/micropython/ports/msvc/genhdr/: mpversion.h  qstrdefs.generated.h  qstrdefscollected.h
codemp/rd-rend2/micropython/ports/unix/: alloc.c  coverage.c  fatfs_port.c  fdfile.h  file.c  gccollect.c  input.c  main.c  modffi.c  modjni.c  modmachine.c  modos.c  modtermios.c  modtime.c  moduos_vfs.c  moduselect.c  modusocket.c  mpconfigport.h  mpthreadport.c  unix_file.c  unix_main.c  unix_mphal.c
codemp/rd-vanilla/: G2_API.cpp  G2_bolts.cpp  G2_bones.cpp  G2_misc.cpp  tr_WorldEffects.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_scene.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_skin.cpp  tr_subs.cpp  tr_surface.cpp  tr_surfacesprites.cpp  tr_world.cpp
codemp/server/: sv_gameapi.cpp  sv_init.cpp
shared/sdl/: sdl_input.cpp  sdl_window.cpp
shared/sys/: sys_main.cpp  sys_win32.cpp
